tests/PhiCore/compile_failure/src/core/observer_ptr/not_null_default.fail.cpp
#include <phi/core/observer_ptr.hpp>

int main()
{
    phi::not_null_observer_ptr ptr;
}
